# pinus-flatbuffer-websocket

./: ReadMe.md
_deprecated/napi-jwt/: Cargo.toml  index.js
_deprecated/napi-jwt/npm/android-arm-eabi/: README.md  package.json
_deprecated/napi-jwt/npm/android-arm64/: README.md  package.json
_deprecated/napi-jwt/npm/darwin-x64/: README.md
_deprecated/napi-jwt/npm/freebsd-x64/: README.md
_deprecated/napi-jwt/npm/linux-arm-gnueabihf/: package.json
_deprecated/napi-jwt/npm/linux-arm64-gnu/: README.md  package.json
_deprecated/napi-jwt/npm/linux-arm64-musl/: package.json
_deprecated/napi-jwt/npm/linux-x64-gnu/: README.md
_deprecated/napi-jwt/npm/linux-x64-musl/: README.md
_deprecated/napi-jwt/npm/win32-arm64-msvc/: README.md
_deprecated/napi-jwt/npm/win32-ia32-msvc/: README.md
_deprecated/napi-jwt/npm/win32-x64-msvc/: README.md  package.json
_deprecated/pinus-ws/: .env  (+5 more)
actix-chat/: .env  Cargo.toml  README.md
actix-chat/protocols/src/: lib.rs
actix-chat/protocols/src/proto/: map_xdata_generated.rs  map_xdata_row_generated.rs  request_user_enter_generated.rs  response_user_enter_generated.rs  server_error_type_generated.rs  vec_3_generated.rs
actix-chat/route-generator/: Cargo.toml
actix-chat/route-generator/src/: main.rs
actix-chat/route-generator/src/utils/: file_util.rs
actix-chat/route-marker/src/: lib.rs
actix-chat/scripts/: gen-routes.sh
actix-chat/src/: main.rs  server.rs  session.rs
actix-chat/src/handlers/: entry.rs  logic.rs  mod.rs
actix-chat/src/pinus/: constants.rs  error.rs  handle_data.rs  handle_handshake.rs  handle_handshake_ack.rs  handle_heartbeat.rs  handle_pkgs.rs  mod.rs  protocol.rs
actix-chat/src/pinus/handlers/: entry.rs  mod.rs
actix-chat/src/utils/: config.rs  mod.rs
database/: .env  .pg_format  ReadMe.md  create_or_update_table.sql  login_history.sql  migrate_db.sh  package.json  pg_format.sh  tsconfig.json  tunnel-close.sh  tunnel-start.sh  user.sql  user_info.sql
docker/: .gitignore  config.env  docker-compose.yml  exclude.txt
flatbuffers-js/: gulpfile.js  package-lock.json  package.json
flatbuffers-rs/: ReadMe.md
jwt/: jwt-key-gen.sh
pinus-ws/: .dockerignore  .gitignore  Dockerfile  ReadMe.md  app.ts  build-deps.sh  deploy.sh  dev.sh  generate-entities.sh  package.json  tsconfig.json
proto/: .gitignore  ReadMe.md  package.json  tsconfig.json
route/: package-lock.json  package.json  tsconfig-build.json
rs/: .env  .gitignore  Cargo.toml  Dockerfile-http  Dockerfile-ws
rs/configs/: Cargo.toml
rs/configs/bytes/: ver.json
rs/configs/src/: configs_holder.rs  lib.rs
rs/configs/src/bytes/: mod.rs  user_exp.rs  ver.rs
rs/configs/src/db/: mod.rs  system_mail.rs
rs/database/: Cargo.toml
rs/database/src/: db_util.rs  lib.rs
rs/database/src/dto/: mod.rs  user_info_dto.rs  user_login_dto.rs
rs/database/src/service/: mod.rs  user_info_db.rs  user_login_db.rs
rs/entities/: Cargo.toml
rs/entities/src/: db_schema_ups.rs  lib.rs  login_history.rs  prelude.rs  system_mail.rs  user_info.rs  user_login.rs
rs/macro-markers/: Cargo.toml
rs/macro-markers/src/: lib.rs
rs/protocols/: Cargo.toml
rs/protocols/src/: lib.rs
rs/protocols/src/proto/: color_generated.rs  map_xdata_generated.rs  map_xdata_row_generated.rs  request_user_enter_generated.rs  request_user_hello_generated.rs  response_user_enter_generated.rs  response_user_hello_generated.rs  server_error_msg_generated.rs  server_error_msg_row_generated.rs  server_error_type_generated.rs  user_exp_generated.rs  user_exp_row_generated.rs  user_info_generated.rs  vec_3_generated.rs
rs/scripts/: config-bytes-mod-gen.rs  config-db-mod-gen.rs  deploy.sh  gen-config-mod.sh  gen-entities.sh  gen-routes.sh  route-gen.rs
rs/server-http/: .dockerignore  .env  Cargo.toml
rs/server-http/src/: main.rs  response_result.rs
rs/server-http/src/features/: mod.rs
rs/server-http/src/features/user/: mod.rs  req_msgs.rs  user_controller.rs  user_service.rs
rs/server-ws/: Cargo.toml  Dockerfile  README.md
rs/server-ws/src/: actix_msgs.rs  main.rs  server.rs  session.rs
rs/server-ws/src/handlers/: entry.rs  mod.rs
rs/server-ws/src/logic/: mod.rs  user_info_service.rs
rs/server-ws/src/pinus/: handle_data.rs  handle_handshake.rs  handle_handshake_ack.rs  handle_heartbeat.rs  handle_pkgs.rs  mod.rs  msg.rs  pkg.rs
rs/utils/: Cargo.toml
rs/utils/configs/bytes/: ver.json
rs/utils/keys/: jwtES256.key
rs/utils/src/: constants.rs  crypto.rs  env_config.rs  jwt.rs  lib.rs  rand_provider.rs  rand_value_processor.rs  simple_pcg.rs  time.rs
rust-http/: .env  Cargo.toml  Dockerfile  ReadMe.md  deploy.sh
rust-http/entities/src/: lib.rs  login_history.rs  prelude.rs  user_info.rs
rust-http/scripts/: deploy.sh
rust-http/src/: main.rs
rust-http/src/database/: db_util.rs  mod.rs
rust-http/src/database/dto/: mod.rs  request_user_dto.rs  response_login_dto.rs  user_dto.rs
rust-http/src/database/repositories/: mod.rs  user_repository.rs
rust-http/src/features/root_ok/: mod.rs
rust-http/src/features/user/: mod.rs  user_controller.rs  user_service.rs
rust-http/src/utils/: config.rs  crypto.rs  error.rs  jwt.rs  mod.rs  result.rs
rust-ws/: .env  .gitignore  Cargo.toml  README.md
rust-ws/entities/: Cargo.toml
rust-ws/entities/src/: db_schema_ups.rs  lib.rs  login_history.rs  prelude.rs  user.rs
rust-ws/protocols/: Cargo.toml
rust-ws/protocols/src/proto/: server_error_msg_generated.rs
rust-ws/route-generator/src/: main.rs
rust-ws/route-marker/: Cargo.toml
rust-ws/src/: main.rs  session.rs
rust-ws/src/database/: db_util.rs
rust-ws/src/database/dto/: mod.rs  user_info_dto.rs
rust-ws/src/database/repositories/: mod.rs  user_info_repository.rs
rust-ws/src/features/user_info/: user_info_service.rs
rust-ws/src/pinus/: handle_data.rs  handle_handshake_ack.rs  handle_heartbeat.rs  handle_pkgs.rs  mod.rs  msg.rs  pkg.rs
rust-ws/src/pinus/handlers/: entry.rs  mod.rs
rust-ws/src/utils/: config.rs  jwt.rs  mod.rs
server/: .gitignore  app.ts  package-lock.json  package.json  tsconfig.json
test/: package.json
(+412 files in other folders)
