[workspace]
resolver = "2"
members = [
    "database",
    "entities",
    "macro-markers",
    "protocols",
    "utils",
    "server-http",
    "configs",
    "server-ws",
]

[workspace.package]
publish = false
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
database = { path = "./database" }
entities = { path = "./entities" }
macro-markers = { path = "./macro-markers" }
protocols = { path = "./protocols" }
utils = { path = "./utils" }
configs = { path = "./configs" }

actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"
flatbuffers = { git = "https://github.com/google/flatbuffers", tag = "v24.3.25" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
byteorder = "1.2"
env_logger = "0.11"
futures-util = { version = "0.3.17", features = ["std", "sink"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.8"
dotenv = "0.15.0"
async-trait = "0.1.74"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
redis = { version = "0.25", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
    "json",
] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
] }
sha256 = "1.4.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
actix-cors = "0.7.0"
actix-rt = "2.9.0"
chrono = "0.4.31"
arc-swap = "1.7.1"
config = "0.14.0"
derive_more = "0.99.17"
