[package]
name = "rust-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities"]

[dependencies]
entities = { path = "entities" }
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.4.0"
chrono = "0.4.30"
config = "0.13.3"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.8"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
log = "0.4"
redis = { version = "0.23", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
sea-orm = { version = "0.12.3", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
serde = "1.0.188"
serde_json = "1.0.107"
sha256 = "1.4.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
