[package]
name = "rust-ws"
version = "1.0.0"
edition = "2021"

[dependencies]
route-marker = { path = "./route-marker" }
protocols = { path = "./protocols" }
entities = { path = "entities" }

actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"

byteorder = "1.2"
env_logger = "0.10"
futures-util = { version = "0.3.17", features = ["std", "sink"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.8"
dotenv = "0.15.0"
async-trait = "0.1.74"
flatbuffers = "23.5.26"
anyhow = "1.0.75"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
redis = { version = "0.23", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
sea-orm = { version = "0.12.3", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
sha256 = "1.4.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
chrono = "0.4.31"
