[package]
name = "database"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
entities = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
utils = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
