[package]
name = "macro-markers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true
