[package]
name = "server-http"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { workspace = true }
protocols = { workspace = true }
utils = { workspace = true }
database = { workspace = true }

actix-cors = { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
tokio-pg-mapper = { workspace = true }
tokio-pg-mapper-derive = { workspace = true }
tokio-postgres = { workspace = true }
anyhow = { workspace = true }
