[package]
name = "server-ws"
version = "1.0.0"
edition = "2021"


[dependencies]
macro-markers = { workspace = true }
protocols = { workspace = true }
entities = { workspace = true }
configs = { workspace = true }
utils = { workspace = true }
database = { workspace = true }

actix = { workspace = true }
actix-codec = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
flatbuffers = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
sha256 = { workspace = true }
tokio-pg-mapper = { workspace = true }
tokio-pg-mapper-derive = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
