[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
protocols = { workspace = true }
flatbuffers = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
