[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.12.3", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
